# ducktape

./: .gitignore  Cargo.toml  claude.md
api/: Cargo.toml
api/src/: lib.rs
api/src/http/: server.rs
api/src/services/: comment.rs  document.rs  mod.rs  task.rs
api/src/utils/: identifier.rs
auth/: Cargo.toml
auth/src/: user.rs
constructs/doctree/: Cargo.toml
constructs/doctree/src/: entry.rs  lib.rs  tree.rs
constructs/doctree/src/drivers/: stdfs.rs
constructs/document/: Cargo.toml
constructs/document/src/: instance.rs  lib.rs  parser.rs
constructs/document/src/sections/: comment_v1.rs  frontmatter_v1.rs  mod.rs
constructs/identifier/: Cargo.toml
constructs/identifier/src/: document.rs  lib.rs  rand.rs
constructs/tracker/src/: lib.rs
demo/: Cargo.toml
demo/src/: main.rs
doctree/: Cargo.toml
doctree/src/: entry.rs  lib.rs  tree.rs
doctree/src/drivers/: mod.rs  stdfs.rs
document/: Cargo.toml
document/src/: buffer.rs  instance.rs  lib.rs  variables.rs
document/src/sections/: frontmatter_v1.rs  mod.rs  task_v1.rs
engine/: Cargo.toml
engine/src/: git.rs  lib.rs  node.rs
engine/tests/: agentic_e2e.rs  consensus_lane.rs  node_convergence.rs  vcs_lane.rs
examples/: demo-2node.sh  main.rs  node0.toml  node1.toml
examples/sampledata/sample/project-1/: spec1.md  spec2.md
examples/sampledata/sample/project-2/: spec1.md
host/: Cargo.toml
host/src/: lib.rs
host/tests/: cross_module.rs  end_to_end.rs
modules/directory/: Cargo.toml
modules/directory-interface/: Cargo.toml
modules/directory-interface/src/: lib.rs
modules/directory/src/: lib.rs
modules/greeter/: Cargo.toml
modules/greeter/src/: lib.rs
modules/kv/: Cargo.toml
sdk/: Cargo.toml
sdk/src/: lib.rs
sections/: Cargo.toml
sections/comment/: Cargo.toml
sections/comment/src/: comment_v1.rs  lib.rs
sections/common/: Cargo.toml
sections/common/src/: lib.rs
sections/frontmatter/: Cargo.toml
sections/src/: comment_v1.rs  frontmatter_v1.rs  lib.rs
state/: Cargo.toml
state/src/: lib.rs
system/kv/: Cargo.toml
system/kv-interface/: Cargo.toml
system/kv-interface/src/: lib.rs
system/kv/src/: lib.rs
tracker/: Cargo.toml
ui/: .gitignore  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx
ui/src/api/: client.ts  websocket.ts
ui/src/components/: Editor.tsx  FileNav.tsx
ui/src/types/: slate.d.ts
utils/src/: time.rs
