[package]
name = "ducktape"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "packages/auth",
    "bin",
    "packages/doctree_legacy",
    "packages/document",
    "packages/nodes",
    "packages/api",
    "packages/uid",
    "utils", "packages/hydration", "packages/workspace", "packages/op", "engine",
    "packages/vcs", "packages/control", "packages/transport",
    "packages/agent", "packages/net", "packages/objstore",
]

[workspace.dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
anyhow = "1.0.98"
lazy_static = "1.5.0"
regex = "1.11.1"
poem = "3.1.12"
sha2 = "0.10.9"
rand = "0.9.2"
uuid = { version = "1.11", features = ["v7", "serde"] }
toml = "0.8"
tokio = { version = "1.47.1", features = ["full", "rt"] }

# commonware (kept at the SAME version `net` uses — see packages/net/Cargo.toml).
# the bin needs these to run the runtime + derive ed25519 identities for the real
# commonware node path; `engine` deliberately does NOT depend on them.
commonware-runtime = "2026.5.0"
commonware-cryptography = "2026.5.0"

# internal
auth     = { path = "packages/auth" }
api      = { path = "packages/api" }
doctree_legacy = { path = "packages/doctree_legacy" }
document = { path = "packages/document" }
nodes    = { path = "packages/nodes" }
uid      = { path = "packages/uid" }
utils    = { path = "utils" }
hydration = { path = "packages/hydration"}
workspace = { path = "packages/workspace"}
op = { path = "packages/op"}
vcs = { path = "packages/vcs" }
control = { path = "packages/control" }
transport = { path = "packages/transport" }
agent = { path = "packages/agent" }
net = { path = "packages/net" }
objstore = { path = "packages/objstore" }
engine = { path = "engine" }

[[bin]]
name = "ducktape"
path = "bin/src/main.rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
api.workspace = true
engine.workspace = true
tokio = { workspace = true, features = ["rt", "full"] }
# the real commonware-node path (bin/src/main.rs is the bin target of BOTH this
# root `ducktape` package and the `bin` member, so both manifests carry these).
net.workspace = true
op.workspace = true
transport.workspace = true
workspace.workspace = true
document.workspace = true
commonware-runtime.workspace = true
commonware-cryptography.workspace = true
