# super-app workspace — a consensus-based platform whose features (documents,
# forge, chat, tasks, …) are isolated MODULES. a module is a crate that depends
# ONLY on `sdk` + the types-only `*-interface` crates of modules it talks to —
# never another module's impl. the host dispatches modules over consensus and
# composes each authenticated root into the global app-hash. cosmwasm's isolation
# *pattern*, native rust (no wasm sandbox).

[workspace]
resolver = "2"
members = [
    "sdk", "state", "host",
    "system/kv", "system/kv-interface",
    "modules/directory", "modules/directory-interface", "modules/greeter",
    "demo",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

# commonware — one ecosystem, version-aligned (see auto-memory reference_qmdb_commonware).
commonware-storage = "2026.5.0"
commonware-runtime = "2026.5.0"
commonware-cryptography = "2026.5.0"

# internal — impl crates
sdk = { path = "sdk" }
state = { path = "state" }
host = { path = "host" }
kv = { path = "system/kv" }
directory = { path = "modules/directory" }
greeter = { path = "modules/greeter" }
# internal — types-only interface crates (the legal cross-module surface)
kv-interface = { path = "system/kv-interface" }
directory-interface = { path = "modules/directory-interface" }
