[package]
name = "demo"
edition.workspace = true
version.workspace = true

[dependencies]
host = { workspace = true }
kv = { workspace = true }
directory = { workspace = true }
greeter = { workspace = true }
directory-interface = { workspace = true }
sdk = { workspace = true }
commonware-runtime = { workspace = true }
