[package]
name = "sdk"
edition.workspace = true
version.workspace = true

# the interface crate. NO domain deps on purpose — this is the ONLY crate a
# module is allowed to depend on, so anything that lands here becomes a shared
# surface for every module. keep it types + traits. async-trait is the one
# greenlit non-domain dep: it boxes the `Module::execute` future so the host can
# hold modules behind `Box<dyn Module>` (native `async fn` in a trait isn't
# dyn-compatible).
[dependencies]
async-trait = "0.1"
