[package]
name = "frontmatter"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
serde.workspace = true
log.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true

common = { path = "../common" }

document = { path = "../../document" }
